public/sources/attributes/rowLayout/css/tokenizationList/styles.less
@import "../../../../less/boilerplate";
@import "../../../../less/bootstrap/variables";

.vcv-ui-tag-list-container {
  position: relative;
}
.vcv-ui-form-input.vcv-ui-tag-list-input {
  transition: none;
  resize: none;
  word-wrap: break-word;
  word-break: break-all;
  &.vcv-ui-tag-list-input-editing-disabled {
    position: absolute;
    height: 1px;
    opacity: 0;
  }
}
.vcv-ui-tag-list {
  cursor: text;
}
@import "./suggestBox";

/*.vcv-ui-form-input.vcv-ui-tag-list {
  transition: padding 0s;
  margin-bottom: 10px;
  // min-height: 39px;

  &[contenteditable="false"] {

  }
  &.vcv-ui-tag-list-editing-disabled {
    padding: 3px 1px;
  }
}*/

